# anatooly

./: .gitignore  README.md  pyproject.toml
src/anatooly/: __init__.py  cli.py  patterns.py
src/anatooly/analyzers/: __init__.py  dependency_analyzer.py  language_analyzer.py
src/anatooly/detectors/: file_detector.py
src/code_analyzer/: utils.py
src/code_analyzer/analyzers/: report_generator.py  secret_analyzer.py  stack_analyzer.py
src/code_analyzer/detectors/: __init__.py  base.py  code_detector.py  config_detector.py  endpoint_detector.py  header_detector.py
