[tool.poetry]
name = "code-analysis-tool"
version = "0.1.0"
description = "Tool for analyzing code security and tech stack detection"
authors = ["Your Name <you@example.com>"]

packages = [
  { include = "code_analyzer", from = "src" }
]
[tool.poetry.dependencies]
python = "^3.8"
# Добавьте зависимости, например:
# regex = "^2022.10.31"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
# Добавьте dev-зависимости, например:
# flake8 = "^4.0"

[tool.poetry.scripts]
code-analyzer = "code_analyzer.cli:main"